# nakamoto-ui

./: bun.lockb  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs  wallet.rs
src/components/hello/: index.tsx
src/routes/: index.tsx
