[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.7", features = ["shell-execute"] }

log = { version = "0.4", features = ["std"] }
argh = { version = "0.1.3" }
crossbeam-channel = { version = "0.5.6" }
chrono = { version = "0.4", features = ["std"], default-features = false }
thiserror = "1.0.61"
fastrand = "1.3.5"
microserde = "0.1.13"
nakamoto-client = "0.4.0"
nakamoto-net-poll = "0.4.0"
nakamoto-p2p = "0.4.0"
nakamoto-common = "0.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
